# lend_tech

./: README.md  http_server.py  pyproject.toml  template.env
app/: http_server.py
app/interface/: acc_weathe_interface.py
app/routers/: check_conditions_router.py  climate_condition_router.py
app/service/: climate_condition.py  condition_climate.py
app/utils/: accu_weather.py  accu_weather_client.py
